--- a/lib/i386-win32/mainwindowunit.lfm
+++ b/lib/i386-win32/mainwindowunit.lfm
@@ -1,7 +1,7 @@
 object MainWindow: TMainWindow
-  Left = 257
+  Left = 385
   Height = 470
-  Top = 89
+  Top = 178
   Width = 820
   Caption = 'Survey'
   ClientHeight = 450
@@ -17,20 +17,20 @@ object MainWindow: TMainWindow
     0B872B2B0B872B2B0B872B2B0B872B2B0B872B2B0B872B2B0B872B2B0B872121
     09693A3A1881F9F9E9FFF3F3E2FFF3F3E2FFF3F3E2FFF3F3E2FFF3F3E2FFF3F3
     E2FFF3F3E2FFF3F3E2FFF3F3E2FFF3F3E2FFF3F3E2FFF3F3E2FFF9F9E9FF3A3A
-    18814D4D297AF4F4E4FFFFCC44FFFECB43FF3C6F83FF3773C5FF3772C3FF3671
-    C1FFD4D4C3FFD3D3C2FF356EBCFF356DBAFF346DB9FF346CB8FFF4F4E4FF4D4D
-    297A55553077F5F5E6FFFFCC44FFFFEE88FF4D9483FF50ACE9FF50ACE9FF4696
-    C1FFF5F5EEFFF5F5EEFF4493BCFF50ACE9FF50ACE9FF4390B8FFF5F5E6FF5555
-    30775A5A3475F6F6E9FFFFCC44FFFECB43FF5DB783FF56BEC5FF55BCC3FF57BF
-    C8FF54B8BFFF53B7BEFF56BCC4FF52B4BAFF51B3B9FF51B2B8FFF6F6E9FF5A5A
-    34755E5E3873F7F7EBFFFFCC44FFFFEE88FFECD286FFF7F7F1FFF7F7F1FF5ACA
-    BCFF67E9E5FF67E9E5FF58C6B7FF67E9E5FF67E9E5FF56C2B3FFF7F7EBFF5E5E
-    387363633C72F8F8EEFFFFCC44FFFECB43FFECD286FFDADAC9FFD8D8C7FF57CD
-    A3FF54C59BFF53C49BFF55C9A0FF52C097FF51BF96FF51BE96FFF8F8EEFF6363
+    18814D4D297AF4F4E4FFFFCC44FFFECB43FFECD286FFDADAC9FFD8D8C7FFD6D6
+    C5FFD4D4C3FFD3D3C2FFD1D1C0FFCFCFBEFFCECEBDFFCDCDBCFFF4F4E4FF4D4D
+    297A55553077F5F5E6FFFFCC44FFFFEE88FFECD286FFF5F5EEFFF5F5EEFFD6D6
+    C5FFF5F5EEFFF5F5EEFFD1D1C0FFF5F5EEFFF5F5EEFFCDCDBCFFF5F5E6FF5555
+    30775A5A3475F6F6E9FFFFCC44FFFECB43FFECD286FFDADAC9FFD8D8C7FFDCDC
+    CCFFD4D4C3FFD3D3C2FFD8D8C8FFCFCFBEFFCECEBDFFCDCDBCFFF6F6E9FF5A5A
+    34755E5E3873F7F7EBFFFFCC44FFFFEE88FFECD286FFF7F7F1FFF7F7F1FFD6D6
+    C5FFF7F7F1FFF7F7F1FFD1D1C0FFF7F7F1FFF7F7F1FFCDCDBCFFF7F7EBFF5E5E
+    387363633C72F8F8EEFFFFCC44FFFECB43FFECD286FFDADAC9FFD8D8C7FFDDDD
+    CEFFD4D4C3FFD3D3C2FFD9D9CAFFCFCFBEFFCECEBDFFCDCDBCFFF8F8EEFF6363
     3C7267674070F9F9F1FFFFCC44FFFFEE88FFECD286FFF9F9F5FFF9F9F5FFD6D6
-    C5FFF9F9F5FFF9F9F5FF47B472FF55D692FF55D692FF46B070FFF9F9F1FF6767
+    C5FFF9F9F5FFF9F9F5FFD1D1C0FFF9F9F5FFF9F9F5FFCDCDBCFFF9F9F1FF6767
     40706B6B446EFBFBF4FFFFCC44FFFECB43FFECD286FFDADAC9FFD8D8C7FFDEDE
-    D0FFD4D4C3FFD3D3C2FF40AD59FF3DA453FF3DA453FF3DA353FFFBFBF4FF6B6B
+    D0FFD4D4C3FFD3D3C2FFDADACCFFCFCFBEFFCECEBDFFCDCDBCFFFBFBF4FF6B6B
     446E6F6F476DFCFCF7FFFFCC44FFFFEE88FFECD286FFFCFCFAFFFCFCFAFFD6D6
     C5FFFCFCFAFFFCFCFAFFD1D1C0FFFCFCFAFFFCFCFAFFCDCDBCFFFCFCF7FF6F6F
     476D73734B6BFDFDF9FFFFCC44FFFECB43FFF5CE64FFEBD285FFE9D083FFE7CE
@@ -528,8 +528,8 @@ object MainWindow: TMainWindow
         ShortCut = 46
         OnClick = RecordRemoveMenuItemClick
       end
-      object RecordSortByMenuItem: TMenuItem
-        Caption = 'Sort by...'
+      object RecordSortMenuItem: TMenuItem
+        Caption = 'Sort'
         Bitmap.Data = {
           36040000424D3604000000000000360000002800000010000000100000000100
           2000000000000004000064000000640000000000000000000000000000000000
@@ -566,30 +566,7 @@ object MainWindow: TMainWindow
           79007979790079797900797979007C7C7C007F7F7F247F7F7F667F7F7F247C7C
           7C007979790079797900797979007979790078787800FFFFFF00
         }
-        object RecordSortBySupportsMenuItem: TMenuItem
-          Caption = 'Supports'
-          OnClick = RecordSortBySupportsMenuItemClick
-        end
-        object RecordSortBySexMenuItem: TMenuItem
-          Caption = 'Sex'
-          OnClick = RecordSortBySexMenuItemClick
-        end
-        object RecordSortByLocationMenuItem: TMenuItem
-          Caption = 'Location'
-          OnClick = RecordSortByLocationMenuItemClick
-        end
-        object RecordSortByEducationMenuItem: TMenuItem
-          Caption = 'Education'
-          OnClick = RecordSortByEducationMenuItemClick
-        end
-        object RecordSortByAgeMenuItem: TMenuItem
-          Caption = 'Age'
-          OnClick = RecordSortByAgeMenuItemClick
-        end
-        object RecordSortByVotedMenuItem: TMenuItem
-          Caption = 'Voted'
-          OnClick = RecordSortByVotedMenuItemClick
-        end
+        OnClick = RecordSortMenuItemClick
       end
     end
     object ViewMenu: TMenuItem
