--- a/aboutwindowunit.lfm
+++ b/aboutwindowunit.lfm
@@ -15,7 +15,7 @@ object AboutWindow: TAboutWindow
     Height = 61
     Top = 16
     Width = 291
-    Caption = 'Survey v1.0.0'
+    Caption = 'Survey v1.1.0'
     Font.CharSet = EASTEUROPE_CHARSET
     Font.Height = -48
     Font.Name = 'Trebuchet MS'
@@ -43,14 +43,14 @@ object AboutWindow: TAboutWindow
   object Email: TLabel
     Cursor = crHandPoint
     Left = 40
-    Height = 17
+    Height = 18
     Top = 136
     Width = 103
     Caption = 'email comes here'
     Font.CharSet = EASTEUROPE_CHARSET
     Font.Color = clBlue
     Font.Height = -13
-    Font.Name = 'Segoe UI'
+    Font.Name = 'Trebuchet MS'
     Font.Pitch = fpVariable
     Font.Quality = fqDraft
     Font.Style = [fsUnderline]
@@ -61,14 +61,14 @@ object AboutWindow: TAboutWindow
   object Github: TLabel
     Cursor = crHandPoint
     Left = 48
-    Height = 17
+    Height = 18
     Top = 184
-    Width = 240
+    Width = 253
     Caption = 'https://github.com/hejmsdz/DelphiSurvey'
     Font.CharSet = EASTEUROPE_CHARSET
     Font.Color = clBlue
     Font.Height = -13
-    Font.Name = 'Segoe UI'
+    Font.Name = 'Trebuchet MS'
     Font.Pitch = fpVariable
     Font.Quality = fqDraft
     Font.Style = [fsUnderline]
@@ -87,14 +87,14 @@ object AboutWindow: TAboutWindow
   object IconsLink: TLabel
     Cursor = crHandPoint
     Left = 112
-    Height = 17
+    Height = 18
     Top = 216
-    Width = 191
+    Width = 205
     Caption = 'http://p.yusukekamiyamane.com/'
     Font.CharSet = EASTEUROPE_CHARSET
     Font.Color = clBlue
     Font.Height = -13
-    Font.Name = 'Segoe UI'
+    Font.Name = 'Trebuchet MS'
     Font.Pitch = fpVariable
     Font.Quality = fqDraft
     Font.Style = [fsUnderline]
