--- a/aboutwindowunit.lfm
+++ b/aboutwindowunit.lfm
@@ -1,7 +1,7 @@
 object AboutWindow: TAboutWindow
-  Left = 536
+  Left = 567
   Height = 240
-  Top = 178
+  Top = 189
   Width = 343
   BorderStyle = bsDialog
   Caption = 'About'
@@ -15,7 +15,7 @@ object AboutWindow: TAboutWindow
     Height = 61
     Top = 16
     Width = 291
-    Caption = 'Survey v1.1.1'
+    Caption = 'Survey v1.2.0'
     Font.CharSet = EASTEUROPE_CHARSET
     Font.Height = -48
     Font.Name = 'Trebuchet MS'
@@ -40,42 +40,6 @@ object AboutWindow: TAboutWindow
     Caption = 'Project assignment for Programming Basics laboratory classes'
     ParentColor = False
   end
-  object Email: TLabel
-    Cursor = crHandPoint
-    Left = 40
-    Height = 18
-    Top = 136
-    Width = 103
-    Caption = 'email comes here'
-    Font.CharSet = EASTEUROPE_CHARSET
-    Font.Color = clBlue
-    Font.Height = -13
-    Font.Name = 'Trebuchet MS'
-    Font.Pitch = fpVariable
-    Font.Quality = fqDraft
-    Font.Style = [fsUnderline]
-    ParentColor = False
-    ParentFont = False
-    OnClick = EmailClick
-  end
-  object Github: TLabel
-    Cursor = crHandPoint
-    Left = 48
-    Height = 18
-    Top = 184
-    Width = 253
-    Caption = 'https://github.com/hejmsdz/DelphiSurvey'
-    Font.CharSet = EASTEUROPE_CHARSET
-    Font.Color = clBlue
-    Font.Height = -13
-    Font.Name = 'Trebuchet MS'
-    Font.Pitch = fpVariable
-    Font.Quality = fqDraft
-    Font.Style = [fsUnderline]
-    ParentColor = False
-    ParentFont = False
-    OnClick = GithubClick
-  end
   object IconsCredit: TLabel
     Left = 40
     Height = 15
@@ -84,22 +48,48 @@ object AboutWindow: TAboutWindow
     Caption = 'Icons credit:'
     ParentColor = False
   end
-  object IconsLink: TLabel
+  object IconsLink: TMyHyperlink
     Cursor = crHandPoint
     Left = 112
-    Height = 18
-    Top = 216
-    Width = 205
+    Height = 15
+    Top = 218
+    Width = 182
     Caption = 'http://p.yusukekamiyamane.com/'
-    Font.CharSet = EASTEUROPE_CHARSET
-    Font.Color = clBlue
-    Font.Height = -13
-    Font.Name = 'Trebuchet MS'
-    Font.Pitch = fpVariable
-    Font.Quality = fqDraft
+    Font.Color = clHotLight
     Font.Style = [fsUnderline]
     ParentColor = False
     ParentFont = False
-    OnClick = IconsLinkClick
+    URL = 'http://p.yusukekamiyamane.com/'
+    NormalColor = clHotLight
+    HoverColor = clHighlight
+  end
+  object GithubLink: TMyHyperlink
+    Cursor = crHandPoint
+    Left = 64
+    Height = 15
+    Top = 176
+    Width = 225
+    Caption = 'https://github.com/hejmsdz/DelphiSurvey'
+    Font.Color = clHotLight
+    Font.Style = [fsUnderline]
+    ParentColor = False
+    ParentFont = False
+    URL = 'https://github.com/hejmsdz/DelphiSurvey'
+    NormalColor = clHotLight
+    HoverColor = clHighlight
+  end
+  object EmailLink: TMyHyperlink
+    Cursor = crHandPoint
+    Left = 57
+    Height = 15
+    Top = 136
+    Width = 93
+    Caption = 'email comes here'
+    Font.Color = clHotLight
+    Font.Style = [fsUnderline]
+    ParentColor = False
+    ParentFont = False
+    NormalColor = clHotLight
+    HoverColor = clHighlight
   end
 end
